# deity

./: .cookiecutter.json  .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .sourcery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  allen_brain_ontology.csv.dvc  codecov.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/deity/: __encode__.py  __init__.py  __main__.py  __rename__.py  create_contact_sheet.py  decode.py  encode.py  rename.py  utils.py
src/deity/barcodes/: __init__.py  create_qr.py
src/deity/conf/: __init__.py  contact_sheet.yaml
src/deity/database/: __init__.py  __utils__.py  create_update_sql.py  utils.py
src/deity/ontology/: __init__.py  allen_brain.py
tests/: __init__.py  conf_test.py  conftest.py  test_encode.py  test_imports.py  test_main.py  test_rename.py  test_utils.py
tests/barcodes/: __init__.py  test_create_qr.py
tests/database/: test_db_utils.py  test_utils.py
